# OpenSEM

./: .gitignore  .gitmodules  README.md
architecture/: README.md
fpga/: sem.py
open_sem/: README.md  backscatter.py  dac.py  fixed_point.py  ft60x.py  highlight.sh  ledbar.py  pwm.py  samplemux.py  sampling.py  scanning.py  sem_board.py  top.py  xadc.py
open_sem_high_voltage_controller/: platformio.ini
open_sem_high_voltage_controller/src/: main.cpp
open_sem_pc/: CMakeLists.txt  Hp6624a.h  KilovoltsHR30.h  dac_test.cpp  exp_fit.h  main.cpp  rate_limited_function_call.h  scan_controller.h  serial_controller.h  vacuum_controller.h
open_sem_vacuum_controller/sem_vacuum_controller/: platformio.ini
open_sem_vacuum_controller/sem_vacuum_controller/src/: main.cpp
sem_info/cambridge_stereoscan_250/: README.md
sem_info/cambridge_stereoscan_260/: README.md
sem_info/cambridge_stereoscan_260/CAD/edwards_ext70_turbopump/: README.md  mounting_flange.f3d  mounting_flange.step
